# Wall-E-project

./: .gitmodules  CMakeLists.txt  README.md
components/sra-board-component/examples/oled/: sdkconfig
include/: declaration.h  tasks.h
main/: CMakeLists.txt  main.c
multi-tasking-leds/: readme.md
multi-tasking-leds/main/: main.c
project_1/main/: main.c
